2016-08-12  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/comm.c (is_client_present): Don't call
	openvas_get_socket_from_connection() in unix socket case as it is not an
	openvas stream socket.

	* src/hosts.c (forward): Don't define buf as static variable.

2016-08-12  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/hosts.c (hosts_read_client): Don't call
	openvas_get_socket_from_connection() in unix socket case as it is not an
	openvas stream socket.

	* src/openvassd.c (unix_socket_path): Remove static modifier.

2016-08-09  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (start_daemon_mode, loading_client_handle)
	(scanner_thread, init_ssl_ctx): Adjust for unix socket case.
	(init_unix_network): New function.
	(init_openvassd): Don't call init_network.
	(main): Add --unix-socket option. Adjust initialization functions calls
	accordingly.

2016-07-28  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/sighand.c (sighand_segv): Raise signal again, to enable core
	dumps.

2016-07-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/comm.c (send_plug_info): Don't send nvt summary.

2016-06-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CMakeLists.txt: Increase required cmake version from 2.6
	to 2.8 because 2.8 is the minimum version we are sure it
	works with.

	* INSTALL: Update accordingly.

2016-05-23  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (nvti_category_is_safe): New function.

2016-06-22  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/pluginload.c (plugins_reload_from_dir): Drop code
	path for glib<2.28 since we require now at least 2.32.

2016-06-22  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CMakeLists.txt, INSTALL: Imcrease dependency for glib from 2.16 to
	2.32 in order to allow the use of newer API elements. Also,
	prior to 2.32 there is subject to the (disputed) CVE-2012-0039.
